--- a/3- Desarrollo/maketacionMPA/css/estilo_Administrador.css
+++ b/3- Desarrollo/maketacionMPA/css/estilo_Administrador.css
@@ -1,3 +1,9 @@
+.sec{
+overflow: auto;
+height: auto,
+width:auto;
+padding: 0;
+}
 
 .logo{
 	width: 40%;
@@ -6,41 +12,44 @@
 .div{
 	float: right;
 	margin-right: 30%;
-	margin:  -15% 30%;
+	
 }
 .img{
 	display: flex;
 	align-content: center;
 	margin-left: 20%;
-	padding: 06% 0%;
+
+	width: 20%;
 }
 .P{
 	float: left;
 	margin-left: -20%;
 	padding: 20% 5%;
+	
 }
 .img1{
 	display: flex;
 	align-content: center;
 	margin-left: -7%;
-	padding: 05% 15%;
+	
+	width: 20%;
 }
 .P1{
 	float: left;
 	margin-left: -30%;
-	padding: 20% 5%;
+	
 
 }
 .img2{
 	display: flex;
 	align-content: center;
-	margin-left: -3%;
-	padding: -05% 10%;
+	margin-left: 3%;
+	
+	width: 20%;
 
 }
 .P2{
 	float: left;
 	margin-left: -60%;
-	padding: 20% 5%;
-
+	
 }
