--- a/3- Desarrollo/maketacionMPA/css/registrousuario.css
+++ b/3- Desarrollo/maketacionMPA/css/registrousuario.css
@@ -1,12 +1,14 @@
 *{
 	
 }
-img{
-	width: auto;
-	height: 200px;
-	float: left;
-	margin-left: 40%;
-	
+.img{
+		display: flex;
+		align-content: center;
+		justify-content: center;
+		margin: auto;
+		width: 60%;
+		height: auto;
+		
 
 }
 section{
@@ -73,17 +75,7 @@ h1{
 th, td {
 	border: solid 3px #7F5BA3FF;
 }
-footer{
-	width: 100%;
-	height: 250px;
-	border: 3px solid #000000FF;
-	box-sizing: border-box;
-	color: #FFFFFFFF;
-	text-align: center;
-	background: #000000FF;
-	font-synthesis: 24;
 
-}
 .colorear{
 	width: 100%;
 	height: 40px;
